--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>REST API Practice</title>
 </head>
 <body>
+
+    <div class="container pt-3">
+        <h1>REST API</h1>
+
+        <form class="form-inline mb-3">
+            <div class="form-group mr-5">
+                <label for="name" class="mr-3">Имя</label>
+                <input type="text" class="form-control" id="name">
+            </div>
+            <button class="btn btn-primary" type="submit">Создать</button>
+        </form>
+
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Name</h5>
+                <p class="card-text">Value</p>
+                <button class="btn btn-primary">Отменить</button>
+                <button class="btn btn-danger">Удалить</button>
+            </div>
+        </div>
+    </div>
 
 <script type="module" src="vue.js"></script>
 </body>
