--- a/client/index.html
+++ b/client/index.html
@@ -7,28 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>REST API Practice</title>
+
+    <style>
+        [v-cloak] {
+            display: none;
+        }
+    </style>
+
 </head>
 <body>
 
-    <div class="container pt-3">
+    <div class="container pt-3" id="app" v-cloak>
         <h1>REST API</h1>
 
-        <form class="form-inline mb-3">
+        <form class="form-inline mb-3" @submit.prevent='createContact'>
             <div class="form-group mr-5">
                 <label for="name" class="mr-3">Имя</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="name" v-model='form.name'>
+            </div>
+            <div class="form-group mr-5">
+                <label for="value" class="mr-3">Значение</label>
+                <input type="text" class="form-control" id="value" v-model='form.value'>
             </div>
             <button class="btn btn-primary" type="submit">Создать</button>
         </form>
 
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title">Name</h5>
-                <p class="card-text">Value</p>
-                <button class="btn btn-primary">Отменить</button>
-                <button class="btn btn-danger">Удалить</button>
+        <div v-if='contacts.length'>
+            <div class="card mb-3" v-for='contact in contacts'>
+                <div class="card-body">
+                    <h5 class="card-title">{{contact.name}}</h5>
+                    <p class="card-text">{{contact.value}}</p>
+                    <button class="btn btn-primary">Отменить</button>
+                    <button class="btn btn-danger">Удалить</button>
+                </div>
             </div>
         </div>
+        <p v-else>Контактов пока нет</p>
     </div>
 
 <script type="module" src="vue.js"></script>
